--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "nmrp7",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rrcanlas.github.io/NMapVA/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-google-maps": "^9.4.5",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
